--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         </div>
 
         <h3 class="animate-fade-in-up" style="animation-delay: 1.2s;">Connect With Us!</h3>
+        
+        <div class="qr-section animate-fade-in-up" style="animation-delay: 1.3s;">
+            <div class="qr-code">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://aljojoby9.github.io/Profile_Page/" alt="QR Code" class="qr-image">
+                <p class="qr-text">Scan to Connect</p>
+            </div>
+        </div>
 
         <div class="qr-section animate-fade-in-up" style="animation-delay: 1.3s;">
             <div class="qr-code">
